--- a/EmployeeManagmentCore/Views/EmployeeRegistration/NewRegistration.cshtml
+++ b/EmployeeManagmentCore/Views/EmployeeRegistration/NewRegistration.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<string>
+﻿
 @{
     ViewData["Title"] = "New Registration";
     Layout = null;
@@ -12,8 +12,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EmployeeManagmentCore.styles.css" asp-append-version="true" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.5/signalr.min.js"></script>
+    @* <script type="text/javascript" src="/EmployeeManagmentCore/Scripts/Script.Login.js"></script>
+    <script type="text/javascript" src="~/EmployeeManagmentCore/Scripts/Script.Login.js"></script> *@
+    <script src="~/js/Script.Login.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -38,12 +42,12 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-5 p-lg-5">
+            <div class="col-md-4">
                 <h3 style="font-family: sans-serif;">
                     New Employee Registration
                 </h3>
             </div>
-            <div class="col-md-7  p-lg-5">
+            <div class="col-md-7">
                 <div class="card bRad" style="width: 50rem;">
                     <div class="card-body p-0 bRad">
                         <h5 class="card-title p-2" style="border-radius: 10px 10px 0px 0px;background:linear-gradient(to right,#EFF6FC,#f3ddfa)">Employee Registration</h5>
@@ -61,7 +65,11 @@
                             <div class="col">
                                 <label class="text-start">Country:</label>
                                 <select class="form-control" id="ddlCountry" placeholder="select One Country">
-                                    <option value="">Select One Country</option>
+                                        <option value="item">Select One Country</option>
+                                    @foreach (var item in ViewBag.CountryList)
+                                    {
+                                        <option value="@item">@item</option>
+                                    }
                                 </select>
                             </div>
 
@@ -77,19 +85,31 @@
                             </div>
                             <div class="col">
                                 <label class="text-start">State</label>
-                                <select class="form-control" id="ddlState">
+                                @* <select class="form-control" id="ddlState">
                                     <option value="">Select One Value</option>
-                                </select>
+                                </select> *@
+                                <input class="form-control" type="text" id="lblState" placeholder="Enter State" />
                             </div>
                         </div>
                         <div class="row mt-2">
                             <div class="col">
                                 <label class="text-start">Gender:</label>
-                                <input class="form-control" type="text" id="lblGender" placeholder="Enter Gender" />
+                                <select class="form-control" id="ddlGender">
+                                <option value="">Select One Value</option>
+                                    <option value="Male">Male</option>
+                                    <option value="Female">Female</option>
+                                </select>
                             </div>
                             <div class="col">
                                 <label class="text-start">User Type:</label>
-                                <input class="form-control" type="text" id="lblUserType" placeholder="Select User Type"/>
+                                @* <input class="form-control" type="text" id="lblUserType" placeholder="Select User Type"/> *@
+                                <select class="form-control" id="lblUserType">
+                                    <option value="">Select One Value</option>
+                                    @foreach (var item in ViewBag.UserType)
+                                    {
+                                        <option value="@item.ID">@item.Type</option>
+                                    }
+                                </select>
                             </div>
                             <div class="col">
                                 <label class="text-start">Pin Code:</label>
@@ -97,8 +117,23 @@
                             </div>
                         </div>
                         <div class="row mt-2">
+                            <div class="col">
+                                <label class="text-start">Username:</label>
+                                <input class="form-control" type="text" id="lblUsername" placeholder="User Name" />
+                            </div>
+                            <div class="col" style="">
+                                @* <label class="text-start">Password:</label>
+                                <input class="form-control" type="password" id="lblpassword" placeholder="Password" /> *@
+                                @* <label class="text-start" ></label> *@
+                            </div>
+                            <div class="col">
+                               @*  <label class="text-start">Pin Code:</label>
+                                <input class="form-control" type="text" id="lblPinCode" placeholder="Select Pin Code" /> *@
+                            </div>
+                        </div>
+                        <div class="row mt-2">
                             <div class="col mt-4">
-                                <button class="btn btn-primary" type="button">Submit</button>
+                                <button class="btn btn-primary" type="button" onclick="submitNewRegistration();">Submit</button>
                                 <button class="btn btn-secondary" type="button">Reset</button>
                                 <a class="btn btn-secondary" asp-area="" asp-controller="" asp-action="">Cancel</a>
                             </div>
@@ -114,7 +149,5 @@
             </div>
         </div>
     </div>
-
-
 </body>
 </html>
